test/pass1.tf
# Cloudfront has WAF and Shield protection

resource "aws_cloudfront_distribution" "pass1" {
  enabled = true
  #  aliases             = "example.com"
  default_root_object = "website/index.html"
  origin {
    domain_name = "mybucket"
    origin_id   = "myS3Origin"

    s3_origin_config {
      origin_access_identity = "origin-access-identity/cloudfront/ABCDEFG1234567"
    }
  }
  default_cache_behavior {
    allowed_methods        = ["GET", "HEAD", "OPTIONS", "PUT", "POST", "PATCH", "DELETE"]
    cached_methods         = ["GET", "HEAD", "OPTIONS"]
    target_origin_id       = "myS3Origin"
    viewer_protocol_policy = "https only" # "redirect-to-https" # other options - https only, http
    forwarded_values {
      headers      = []
      query_string = true
      cookies {
        forward = "all"
      }
    }
  }
  restrictions {
    geo_restriction {
      restriction_type = "whitelist"
      locations        = ["IN", "US", "CA"]
    }
  }
  viewer_certificate {
    cloudfront_default_certificate = false
    acm_certificate_arn            = "arn:aws:acm:us-east-2:971323248867:certificate/12345678-1234-1234-1234-123456789012"
    ssl_support_method             = "sni-only"
    minimum_protocol_version       = "TLSv1.2_2018"
  }

  origin {
    domain_name = "web"
    origin_id   = "webabc123"

    custom_origin_config {
      http_port              = 80
      https_port             = 443
      origin_protocol_policy = "https-only"
      origin_ssl_protocols   = ["TLSv1.2"]
    }
  }
  web_acl_id = aws_wafv2_web_acl.pass1.arn
}

resource "aws_shield_protection" "pass1" {
  name         = "example"
  resource_arn = aws_cloudfront_distribution.pass1.arn

}
resource "aws_wafv2_web_acl" "pass1" {
  name  = "web-acl"
  scope = "CLOUDFRONT"

  default_action {
    allow {}
  }

  visibility_config {
    cloudwatch_metrics_enabled = false
    metric_name                = "friendly-metric-name"
    sampled_requests_enabled   = false
  }
}
